discussion/kv_engine/176227/176227_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-52490: WIP

Change-Id: I9bfd733dc000e22f195cbbe9401c91898b976280

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2022-06-15 09:59:54.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-06-15 11:15:46.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46836/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/cbsasl/user.cc(86): error C2679: binary "=": no operator found which takes a right-hand operand of type "std::string" (or there is no acceptable conversion) ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46836/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18127/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/dcpconnmap.h:121:17: error: non-virtual member function marked "override" hides virtual member function [clang-diagnostic-error]
    void temp() override;
                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/backfill.h:159:18: note: hidden overloaded virtual function "BackfillTrackingIface::temp" declared here: different number of parameters (1 vs 0)
    virtual void temp(DcpProducer& producer) = 0;
                 ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18127/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/dcpconnmap.h:121:17:
error: non-virtual member function marked "override" hides virtual member function [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18127/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39361/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/dcp/dcpconnmap.h:121:17:
error: non-virtual member function marked "override" hides virtual member function
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39361/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7787/ : FAILURE

Compile error at [2022-06-15T11:13:00.104Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/cbsasl/user.cc:86:14:
error: no viable overloaded "="
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7787/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20329/ : FAILURE

Compile error at [2022-06-15T11:13:32.229Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/cbsasl/user.cc:86:39:
error: no match for ?operator=? (operand types are ?std::vector<unsigned char>? and ?std::string? {aka ?std::__cxx11::basic_string<char>?})
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20329/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19980/ : FAILURE

Compile error at [2022-06-15T11:13:44.157Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/cbsasl/user.cc:86:39:
error: no match for ?operator=? (operand types are ?std::vector<unsigned char>? and ?std::string? {aka ?std::__cxx11::basic_string<char>?})
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19980/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28363/ : FAILURE

Compile error at [2022-06-15T11:15:25.626Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/cbsasl/user.cc:86:14:
error: no viable overloaded "="
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28363/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20975/ : FAILURE

Compile error at [2022-06-15T11:13:09.726Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/cbsasl/user.cc:86:14:
error: no viable overloaded "="
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20975/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19188/ : FAILURE

Compile error at [2022-06-15T10:13:39.771Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/cbsasl/user.cc:86:14:
error: no viable overloaded "="
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19188/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7889/ : FAILURE

Compile error at [2022-06-15T10:12:14.185Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/cbsasl/user.cc:86:39:
error: no match for ?operator=? (operand types are ?std::vector<unsigned char>? and ?std::string? {aka ?std::__cxx11::basic_string<char>?})
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7889/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/17215/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Paolo Cocchi
Date: 2022-06-15 13:39:33.000000000
Message: 
Abandoned

moved to Neo branch
----------------------------------------------------------------------------------------------------------------------
